--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/jpeg" href="/4211aacc-bfba-443a-89dd-d3676d5e55ec.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Exact Website Copy</title>
-    <meta property="og:image" content="https://bolt.new/static/og_default.png" />
+    <title>JUSTIORA FOUNDATION - Environmental Justice, Legal Awareness & Public Accountability</title>
+    <meta property="og:title" content="JUSTIORA FOUNDATION" />
+    <meta property="og:description" content="Environmental Justice, Legal Awareness & Public Accountability" />
+    <meta property="og:image" content="/4211aacc-bfba-443a-89dd-d3676d5e55ec.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png" />
+    <meta name="twitter:title" content="JUSTIORA FOUNDATION" />
+    <meta name="twitter:description" content="Environmental Justice, Legal Awareness & Public Accountability" />
+    <meta name="twitter:image" content="/4211aacc-bfba-443a-89dd-d3676d5e55ec.jpg" />
   </head>
   <body>
     <div id="root"></div>
